2013-06-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fsck could be run with -n option (ticket #151).

2013-02-27 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Improve table title display with wide data (ticket #157).

2013-02-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Documentation for -L flag (ticket #157).

2012-12-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Special fields could be used with -o option. (ticket #153)
	* Add 'execute' command. (ticket #145)

2012-11-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix CS debugging regression. (tocket #154)

2012-10-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix a bug when using -l without -f (ticket #143).
	* Fix -f arg for "shine show info"

2012-09-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add node name in error message where needed (ticket #140).
	* Release: 0.912

2012-09-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix ignored args (-t, -i) with 'config' command (ticket #139).

2012-09-04 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exit code when shine cannot umount (ticket #138).
	* Avoid broken pipe error (ticket #137).

2012-08-02 Stephane Thiell  <stephane.thiell@cea.fr>
	* Add filename in lmf/xmf parse error message (ticket #135).

2012-08-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new 'config' command (ticket #67).
	* Add new 'list' command (ticket #133).
	* Add color option in shine.conf (ticket #136).

2012-08-01 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Network supports an optional '0' id (ticket #134).
	* New shine CLI display with options (ticket #105).

2012-07-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Nodes could be specified with -n or -w (ticket #48).
	*  -l also select filesystem when -f is missing (ticket #69).

2012-07-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Rewrite command line option management (ticket #35, #38)
